add a feature line

--- a/hello.html
+++ b/hello.html
@@ -3,5 +3,6 @@
     <title>My webpage</title>
     <body>
         Hello, world! ...and hello again. Add a third line. ... maybe a new thingy?
+        <p>This is a feature added in the feature branch</p>
     </body>
 </html>
