extra feature for pulling

--- a/hello.html
+++ b/hello.html
@@ -4,5 +4,6 @@
     <body>
         Hello, world! ...and hello again. Add a third line. ... maybe a new thingy?
         <p>This is a feature added in the feature branch</p>
+        <p>extra feature for pull request</p>
     </body>
 </html>
